--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,33 +19,32 @@
 
 	<string name="tittle_settings">Налаштування</string>
 	<string name="welcome">Вітаємо!</string>
-	<string name="open_source_licences">Open source licences</string>
+	<string name="open_source_licences">Бібліотеки з відкритим кодом</string>
 
 	<string name="make_your_choice">Зроби свій вибір прямо зараз!</string>
 	<string name="only_here">Тільки тут!</string>
 	<string name="fair_elections">Самі чесні і справедливі вибори</string>
 
-	<string name="btn_ok">OK</string>
-	<string name="btn_next">Next</string>
-	<string name="btn_apply">Apply</string>
-	<string name="btn_start">Start</string>
-	<string name="btn_locate">Locate</string>
-	<string name="btn_settings">Settings</string>
+	<string name="btn_ok">Добре</string>
+	<string name="btn_next">Далі</string>
+	<string name="btn_apply">Застосувати</string>
+	<string name="btn_start">Почати</string>
+	<string name="btn_settings">Налаштування</string>
 	<string name="btn_vote">Голосувати</string>
 
-	<string name="item_image">Item image</string>
+	<string name="item_image">Зображення елемента</string>
 
-	<string name="request">Request or feedback</string>
-	<string name="rate_app">Rate app</string>
-	<string name="email_clients_not_found">Not found any Email client</string>
-	<string name="send_email">Send by email&#8230;</string>
+	<string name="request">Зворотній зв\'язок</string>
+	<string name="rate_app">Оцінити додаток</string>
+	<string name="email_clients_not_found">Не знайдено жодного поштового клієнта</string>
+	<string name="send_email">Надіслати по електронній пошті&#8230;</string>
 
 	<!-- Shown in the 'About' window of the app. -->
 	<string name="about_body"><![CDATA[
-    	<b>Elections 2019</b><br>
-		Version %s
+    	<b>Вибори 2019</b><br>
+		Версія %s
 	]]></string>
 
-	<string name="licences_description">This application makes use of the following third party libraries.</string>
+	<string name="licences_description">Ця програма використовує такі бібліотеки з відкритим кодом</string>
 
 </resources>
