--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,6 +24,7 @@
 	<string name="make_your_choice">Зроби свій вибір прямо зараз!</string>
 	<string name="only_here">Тільки тут!</string>
 	<string name="fair_elections">Самі чесні і справедливі вибори</string>
+	<string name="vote_results">Результати</string>
 
 	<string name="btn_ok">Добре</string>
 	<string name="btn_next">Далі</string>
@@ -41,8 +42,7 @@
 
 	<!-- Shown in the 'About' window of the app. -->
 	<string name="about_body"><![CDATA[
-    	<b>Вибори 2019</b><br>
-		Версія %s
+    	<b>Вибори 2019</b><br>Версія %s
 	]]></string>
 
 	<string name="licences_description">Ця програма використовує такі бібліотеки з відкритим кодом</string>
