--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,62 +15,63 @@
   -->
 
 <resources>
-	<string name="app_name">Вибори Президента 2019</string>
-	<string name="elections">Вибори 2019</string>
+	<string name="app_name">President Elections 2019</string>
+	<string name="elections">Elections 2019</string>
 
-	<string name="tittle_settings">Налаштування</string>
-	<string name="welcome">Вітаємо!</string>
-	<string name="open_source_licences">Бібліотеки з відкритим кодом</string>
-	<string name="share_app">Поділитися додатком</string>
-	<string name="share_details">Я проголосував в додатку Вибори Президента 2019</string>
+	<string name="tittle_settings">Settings</string>
+	<string name="welcome">Congratulations!</string>
+	<string name="open_source_licences">Open source licences</string>
 
-	<string name="make_your_choice">Зроби свій вибір прямо зараз!</string>
-	<string name="only_here">Тільки тут!</string>
-	<string name="fair_elections">Самі чесні і справедливі вибори</string>
-	<string name="vote_results">Результати</string>
-	<string name="select_candidate">Виберіть кандидата</string>
-	<string name="votes">Голоси</string>
-	<string name="vote">Голосування</string>
-	<string name="confirm_vote">Підтвердити голос за %s</string>
-	<string name="emulator">Емулятор!</string>
-	<string name="vote_from_emulator_not_allowed">Ваш пристрий визначено як емулятор. Голосувати з емулятора заборонено!</string>
-	<string name="your_device_already_voted">Ваш телефон вже приймав участь в голосуванні</string>
-	<string name="location_are_needed">Щоб визначити країну в якій ви знаходитесь нам потрібно отримати дозвіл на зчитування координат</string>
-	<string name="warning">Увага!</string>
-	<string name="are_you_from_ukraine">Ви з України?</string>
-	<string name="answer_honestly">Будь-ласка, відповідайте чесно! \nВи зможете проголосувати незалежно від відповіді.</string>
-	<string name="error_location">Не вдалося визначити ваше місцезнаходження</string>
-	<string name="error">Помилка!</string>
-	<string name="pull_to_top_or_bottom_to_close">Потягніть зображення щоб закрити</string>
-	<string name="no_connection_to_internet">Відсутнє з\'єднання з інтернетом.\nДля продовження роботи увімкніть інтернет.</string>
+	<string name="share_app">Share app</string>
+	<string name="share_details">I have voted in President Elections 2019 app</string>
 
-	<string name="btn_ok">Добре</string>
-	<string name="btn_yes">Так</string>
-	<string name="btn_no">Ні</string>
-	<string name="btn_cancel">Відмінити</string>
-	<string name="btn_not_now">Не зараз</string>
-	<string name="btn_next">Далі</string>
-	<string name="btn_apply">Застосувати</string>
-	<string name="btn_start">Почати</string>
-	<string name="btn_settings">Налаштування</string>
-	<string name="btn_vote">Голосувати</string>
-	<string name="btn_vote2">Проголосувати</string>
+	<string name="make_your_choice">Make your choice now!</string>
+	<string name="only_here">Only here!</string>
+	<string name="fair_elections">The most fair elections</string>
+	<string name="vote_results">Results</string>
+	<string name="select_candidate">Select a candidate</string>
+	<string name="votes">Votes</string>
+	<string name="vote">Voting</string>
+	<string name="confirm_vote">Confirm vote for %s</string>
+	<string name="emulator">Emulator!</string>
+	<string name="vote_from_emulator_not_allowed">Your smartphone is defined as an emulator. Voting from an emulator is forbidden!</string>
+	<string name="your_device_already_voted">From your phone has already voted</string>
+	<string name="location_are_needed">To determine the country in which you are located, we need to get permission to read location</string>
+	<string name="warning">Warning!</string>
+	<string name="are_you_from_ukraine">Are you from Ukraine?</string>
+	<string name="answer_honestly">Please answer honestly! \nYou will be able to vote regardless of the answer.</string>
+	<string name="error_location">Failed to find your location</string>
+	<string name="error">Error!</string>
+	<string name="pull_to_top_or_bottom_to_close">Pull image up or down to close</string>
+	<string name="no_connection_to_internet">No connection to the Internet. \nTurn on the Internet to continue.</string>
 
-	<string name="today">Сьогодні</string>
-	<string name="yesterday">Вчора</string>
+	<string name="btn_ok">OK</string>
+	<string name="btn_yes">Yes</string>
+	<string name="btn_no">No</string>
+	<string name="btn_cancel">Cancel</string>
+	<string name="btn_not_now">Not now</string>
+	<string name="btn_next">Next</string>
+	<string name="btn_apply">Apply</string>
+	<string name="btn_start">Start</string>
+	<string name="btn_settings">Settings</string>
+	<string name="btn_vote">Vote</string>
+	<string name="btn_vote2">Vote</string>
 
-	<string name="item_image">Зображення елемента</string>
+	<string name="today">Today</string>
+	<string name="yesterday">Yesterday</string>
 
-	<string name="request">Зворотній зв\'язок</string>
-	<string name="rate_app">Оцінити додаток</string>
-	<string name="email_clients_not_found">Не знайдено жодного поштового клієнта</string>
-	<string name="send_email">Надіслати по електронній пошті&#8230;</string>
+	<string name="item_image">Element image</string>
+
+	<string name="rate_app">Rate app</string>
+	<string name="request">Request or feedback</string>
+	<string name="email_clients_not_found">Not found any Email client</string>
+	<string name="send_email">Send by email&#8230;</string>
 
 	<!-- Shown in the 'About' window of the app. -->
 	<string name="about_body"><![CDATA[
-    	<b>Вибори 2019</b><br>Версія %s
+    	<b>Elections 2019</b><br>Version %s
 	]]></string>
 
-	<string name="licences_description">Ця програма використовує такі бібліотеки з відкритим кодом</string>
+	<string name="licences_description">This application makes use of the following third party libraries.</string>
 
 </resources>
